--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -110,6 +110,8 @@
     <Compile Include="BaseInfo\IAttachmentRepository.cs" />
     <Compile Include="Finance\IOutlayRepository.cs" />
     <Compile Include="Finance\Outlay.cs" />
+    <Compile Include="Storage\Check.cs" />
+    <Compile Include="Storage\ICheckRepository.cs" />
     <Compile Include="Storage\IHisStockRepository.cs" />
     <Compile Include="BaseInfo\ILayerRepository.cs" />
     <Compile Include="BaseInfo\ISysDictionaryRepository.cs" />
