增加盘点表

--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Finance\Dto\OutlayQueryDto.cs" />
     <Compile Include="Finance\Dto\OutlaySummaryEditDto.cs" />
     <Compile Include="Storage\CheckAppService.cs" />
+    <Compile Include="Storage\CheckBillAppService.cs" />
     <Compile Include="Storage\Dto\CheckEditDto.cs" />
     <Compile Include="Storage\Dto\CheckListDto.cs" />
     <Compile Include="Storage\Dto\CheckQueryDto.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="Storage\HisStockAppService.cs" />
     <Compile Include="BaseInfo\IAttachmentAppService.cs" />
     <Compile Include="Storage\ICheckAppService.cs" />
+    <Compile Include="Storage\ICheckBillAppService.cs" />
     <Compile Include="Storage\IHisStockAppService.cs" />
     <Compile Include="BaseInfo\ILayerAppService.cs" />
     <Compile Include="BaseInfo\ISysDictionaryAppService.cs" />
