--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -216,9 +216,9 @@
     <Compile Include="Migrations\201706100612068_addTable-outlay.Designer.cs">
       <DependentUpon>201706100612068_addTable-outlay.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201706121503428_addTable_check.cs" />
-    <Compile Include="Migrations\201706121503428_addTable_check.Designer.cs">
-      <DependentUpon>201706121503428_addTable_check.cs</DependentUpon>
+    <Compile Include="Migrations\201706131431116_addTable_check.cs" />
+    <Compile Include="Migrations\201706131431116_addTable_check.Designer.cs">
+      <DependentUpon>201706131431116_addTable_check.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -228,6 +228,7 @@
     <Compile Include="Repositories\ActualOutlayRepository.cs" />
     <Compile Include="Repositories\BudgetOutlayRepository.cs" />
     <Compile Include="Repositories\BudgetReceiptRepository.cs" />
+    <Compile Include="Repositories\CheckBillRepository.cs" />
     <Compile Include="Repositories\CheckRepository.cs" />
     <Compile Include="Repositories\DeliveryRepository.cs" />
     <Compile Include="Repositories\DeliveryBillRepository.cs" />
@@ -323,8 +324,8 @@
     <EmbeddedResource Include="Migrations\201706100612068_addTable-outlay.resx">
       <DependentUpon>201706100612068_addTable-outlay.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706121503428_addTable_check.resx">
-      <DependentUpon>201706121503428_addTable_check.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706131431116_addTable_check.resx">
+      <DependentUpon>201706131431116_addTable_check.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
