--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -108,6 +108,8 @@
   <ItemGroup>
     <Compile Include="BaseInfo\Attachment.cs" />
     <Compile Include="BaseInfo\IAttachmentRepository.cs" />
+    <Compile Include="Car\Driver.cs" />
+    <Compile Include="Car\IDriverRepository.cs" />
     <Compile Include="Finance\IOutlayRepository.cs" />
     <Compile Include="Finance\Outlay.cs" />
     <Compile Include="Storage\Check.cs" />
@@ -175,7 +177,6 @@
     <EmbeddedResource Include="Localization\Source\SCBF.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Car\" />
     <Folder Include="Purchase\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
