完成加油卡分配功能

--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -160,8 +160,18 @@
     <Compile Include="Car\Dto\CarInfoQueryDto.cs" />
     <Compile Include="Car\Dto\DriverEditDto.cs" />
     <Compile Include="Car\Dto\DriverListDto.cs" />
+    <Compile Include="Car\Dto\OilCardEditDto.cs" />
+    <Compile Include="Car\Dto\OilCardListDto.cs" />
+    <Compile Include="Car\Dto\OilCardQueryDto.cs" />
+    <Compile Include="Car\Dto\RechargeRecordEditDto.cs" />
+    <Compile Include="Car\Dto\RechargeRecordListDto.cs" />
+    <Compile Include="Car\Dto\RechargeRecordQueryDto.cs" />
     <Compile Include="Car\ICarInfoAppService.cs" />
     <Compile Include="Car\IDriverAppService.cs" />
+    <Compile Include="Car\IOilCardAppService.cs" />
+    <Compile Include="Car\IRechargeRecordAppService.cs" />
+    <Compile Include="Car\OilCardAppService.cs" />
+    <Compile Include="Car\RechargeRecordAppService.cs" />
     <Compile Include="Finance\Dto\BudgetPerformanceListDto.cs" />
     <Compile Include="Finance\Dto\OutlayQueryDto.cs" />
     <Compile Include="Finance\Dto\OutlaySummaryEditDto.cs" />
