--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -112,6 +112,10 @@
     <Compile Include="Car\Driver.cs" />
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
+    <Compile Include="Car\IOilCardRepository.cs" />
+    <Compile Include="Car\IRechargeRecordRepository.cs" />
+    <Compile Include="Car\OilCard.cs" />
+    <Compile Include="Car\RechargeRecord.cs" />
     <Compile Include="Finance\IOutlayRepository.cs" />
     <Compile Include="Finance\Outlay.cs" />
     <Compile Include="Storage\Check.cs" />
