--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -108,8 +108,11 @@
   <ItemGroup>
     <Compile Include="BaseInfo\Attachment.cs" />
     <Compile Include="BaseInfo\IAttachmentRepository.cs" />
+    <Compile Include="Car\ApplicationForBunkerA.cs" />
+    <Compile Include="BaseInfo\AuditingStatus.cs" />
     <Compile Include="Car\CarInfo.cs" />
     <Compile Include="Car\Driver.cs" />
+    <Compile Include="Car\IApplicationForBunkerARepository.cs" />
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
