完成加油卡加油审批单

--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -249,6 +249,10 @@
     <Compile Include="Migrations\201706181622127_updateTable_ApplicationForBunkerA.Designer.cs">
       <DependentUpon>201706181622127_updateTable_ApplicationForBunkerA.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706191438301_modifyTable_carinfo2.cs" />
+    <Compile Include="Migrations\201706191438301_modifyTable_carinfo2.Designer.cs">
+      <DependentUpon>201706191438301_modifyTable_carinfo2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -378,6 +382,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706181622127_updateTable_ApplicationForBunkerA.resx">
       <DependentUpon>201706181622127_updateTable_ApplicationForBunkerA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706191438301_modifyTable_carinfo2.resx">
+      <DependentUpon>201706191438301_modifyTable_carinfo2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
