--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -115,8 +115,10 @@
     <Compile Include="Car\IApplicationForBunkerARepository.cs" />
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
+    <Compile Include="Car\IOctaneStoreRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
     <Compile Include="Car\IRechargeRecordRepository.cs" />
+    <Compile Include="Car\OctaneStore.cs" />
     <Compile Include="Car\OilCard.cs" />
     <Compile Include="Car\RechargeRecord.cs" />
     <Compile Include="Finance\IOutlayRepository.cs" />
